feat: address inside users model